<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/auth_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40dp" />

    <Button
        android:id="@+id/auth_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auth_welcome_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/auth_register_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auth_login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/genericlogo" />
</RelativeLayout>